# upstage-network-lecture

./: pyproject.toml
.github/workflows/: main.yml
app/: deps.py
app/api/routes/: chat_routes.py  user_routes.py
app/core/: db.py
app/repository/: user_repo.py
app/schemas/: chat_schemas.py  user_schemas.py
app/service/: user_service.py
