[project]
name = "upstage-network-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic[email]>=2.12.5",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
